Closed
Bug 993280
Opened 11 years ago
Closed 11 years ago
[Bluetooth][Certification][PTS][Bluedroid][1.4] HFP TC_AG_ECS_BV_01_I
Categories
(Firefox OS Graveyard :: Bluetooth, defect)
Tracking
(blocking-b2g:1.4+, firefox29 wontfix, firefox30 fixed, firefox31 fixed, b2g-v1.4 fixed, b2g-v2.0 fixed)
People
(Reporter: ericcc, Assigned: yrliou)
References
Details
Attachments
(3 files, 2 obsolete files)
|
1.69 MB,
application/zip
|
Details | |
|
1.77 MB,
application/zip
|
Details | |
|
1.29 KB,
patch
|
Details | Diff | Splinter Review |
### ENV
Nexus 4/Bluedroid
https://pvtbuilds.mozilla.org/pvt/mozilla.org/b2gotoro/nightly/mozilla-aurora-nexus-4/2014/03/2014-03-25-16-02-01/
### STR
1. PTS 5.0
2. TC_AG_ECS_BV_01_I & TC_AG_ECS_BV_03_I
### Expected
Pass
### Actual
### TC_AG_ECS_BV_01_I
Test case : TC_AG_ECS_BV_01_I started
- SDP Service record for PTS: 'Handsfree HF' successfully registered
- The IUT claims support for the following eSCO LMP packet types: EV3, 2-EV3,
- Using SDP to determine IUT RFCOMM server channel number.
- ProtocolDescriptorList: IUT reports that its RFCOMM server channel number is 3
- The IUT claims support for the following eSCO LMP packet types: EV3, 2-EV3,
- AT: SPP connect succeeded
- AT: WARNING: IUT does not report support for AT+CHLD=3 in its +CHLD response, but TSPC_HFP_2_12c is set to TRUE
- AT: Service Level Connection established
- AT: post SLC command sequence complete
- MTC: AT+CLCC
- AT: +CLCC received: +CLCC: 1,1,1,0,0,"0986143883",129
- AT: +CLCC received: +CLCC: 2,1,0,0,0,"0958028209",129
- FATAL ERROR (MTC): Sending AT command from MTC to AT PTC timed out
- FATAL ERROR (AT): The response to the following AT command has timed out: AT+CLCC
- AT: SPP disconnect succeeded
- MTC received unexpected EXIT message from AT component
Final Verdict : Inconclusive
| Reporter | ||
Comment 1•11 years ago
|
||
### ENV
Nexus 4/Bluedroid
https://pvtbuilds.mozilla.org/pvt/mozilla.org/b2gotoro/nightly/mozilla-aurora-nexus-4/2014/03/2014-03-25-16-02-01/
### STR
1. PTS 5.0
2. TC_AG_ECS_BV_01_I & TC_AG_ECS_BV_03_I
### Expected
Pass
### Actual
### TC_AG_ECS_BV_03_I
Test case : TC_AG_ECS_BV_03_I started
- SDP Service record for PTS: 'Handsfree HF' successfully registered
- The IUT claims support for the following eSCO LMP packet types: EV3, 2-EV3,
- AT: SPP connect succeeded
- AT: WARNING: IUT does not report support for AT+CHLD=3 in its +CHLD response, but TSPC_HFP_2_12c is set to TRUE
- AT: Service Level Connection established
- AT: post SLC command sequence complete
- AT: RING
- AT: Received +CLIP: "0986143883",129
- HCI: Audio Connection enabled
- AT: Incoming call established
- FATAL ERROR (AT): +CIEV(callheld=1) received when there is no second call process
- MTC received unexpected EXIT message from AT component
- HCI: Audio Connection disabled
- AT: SPP disconnect succeeded
- MTC: Test case ended
Final Verdict : Inconclusive
| Assignee | ||
Updated•11 years ago
|
Assignee: nobody → joliu
| Assignee | ||
Comment 2•11 years ago
|
||
Patch1 will fix TC_AG_ECS_BV_01_I by responding OK for AT+CLCC and AT+CHLD commands.
(This patch also adds a response for AT+CHUP command since it's a similar bug.)
TC_AG_ECS_BV_03_I has the same cause as HFP TC_AG_TWC_BV_01_I, will be fixed later in bug 993288.
Attachment #8406655 -
Flags: review?(echou)
| Assignee | ||
Comment 4•11 years ago
|
||
Update the patch, no need to response OK in ProcessHangupCall().
Attachment #8406655 -
Attachment is obsolete: true
Attachment #8406655 -
Flags: review?(echou)
Attachment #8406685 -
Flags: review?(echou)
Comment 5•11 years ago
|
||
Comment on attachment 8406685 [details] [diff] [review]
Patch1 Bug 993280: Respond OK to HF for AT+CLCC and AT+CHLD
Review of attachment 8406685 [details] [diff] [review]:
-----------------------------------------------------------------
::: dom/bluetooth/bluedroid/hfp/BluetoothHfpManager.cpp
@@ +701,5 @@
> MOZ_ASSERT(i == 2);
>
> SendCLCC(mCdmaSecondCall, 2);
> }
> + SendResponse(BTHF_AT_RESPONSE_OK);
not-even-a-nit: personally I would prefer leaving a blank line in this case to separate "SendResponse(BTHF_AT_RESPONSE_OK)" and the logic above. Seems more clear to me. ;)
Attachment #8406685 -
Flags: review?(echou) → review+
| Assignee | ||
Updated•11 years ago
|
No longer depends on: 993288
Summary: [Bluetooth][Certification][PTS][Bluedroid][1.4] HFP TC_AG_ECS_BV_01_I & TC_AG_ECS_BV_03_I → [Bluetooth][Certification][PTS][Bluedroid][1.4] HFP TC_AG_ECS_BV_01_I
| Assignee | ||
Comment 7•11 years ago
|
||
Attachment #8406685 -
Attachment is obsolete: true
| Assignee | ||
Updated•11 years ago
|
Keywords: checkin-needed
Comment 8•11 years ago
|
||
Keywords: checkin-needed
| Assignee | ||
Comment 9•11 years ago
|
||
Set 1.4? as this bug fails bluetooth certification HFP test on bluedroid.
blocking-b2g: --- → 1.4?
Comment 10•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → 2.0 S1 (9may)
Updated•11 years ago
|
blocking-b2g: 1.4? → 1.4+
Comment 11•11 years ago
|
||
status-b2g-v1.4:
--- → fixed
status-b2g-v2.0:
--- → fixed
status-firefox29:
--- → wontfix
status-firefox30:
--- → fixed
status-firefox31:
--- → fixed
Target Milestone: 2.0 S1 (9may) → 1.4 S6 (25apr)
| Reporter | ||
Comment 12•11 years ago
|
||
### Build for verification
https://pvtbuilds.mozilla.org/pvt/mozilla.org/b2gotoro/nightly/mozilla-aurora-nexus-4/2014/04/2014-04-28-00-02-06/
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•