Bug 993280 - Respond OK to HF for AT+CLCC and AT+CHLD. r=echou, a=1.4+